<resources>
    <string name="app_name" translatable="false">SiMoPuVe</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Session</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Esta dirección de correo no es valida</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo no puede estar vacio</string>
    <string name="error_field_number_required">Solo se deben ingresar números</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_welcome">Encuestas Activas</string>
    <string name="prompt_user">Usuario</string>
    <string name="title_pdvrow_list">PDVRows</string>
    <string name="title_pdvrow_detail">PDVRow Detail</string>
    <string name="save">Guardar</string>
    <string name="company_change_reason_string">Motivo cambio de compañia</string>
    <string name="company_change_string">Cambio de compañia</string>
    <string name="express_reload_value">Valor Recarga Express</string>
    <string name="device_rating_string">Calificación Equipo</string>
    <string name="plan_rating">Calificación Plan</string>
    <string name="accesory">Accesorio</string>
    <string name="chip">Chip</string>
    <string name="card">Tarjeta</string>
    <string name="other_purchases">Otras compras</string>
    <string name="additional_features">Características adicionales</string>
    <string name="device_mode_string">Modalidad del equipo</string>
    <string name="contract_type_string">Tipo de contrato</string>
    <string name="model">Modelo:</string>
    <string name="brand">Marca:</string>
    <string name="device">Equipo</string>
    <string name="new_register">Nuevo Registro</string>
    <string name="person_number_string">Persona número:</string>
    <string name="address">Dirección</string>
    <string name="sale_point">Punto de venta</string>
    <string name="location">Comuna</string>
    <string name="survey_date">Fecha de la encuesta</string>
    <string name="number_of_people_am">Nº de personas de 10:00 a 13:00</string>
    <string name="number_of_people_pm">Nº de personas de 14:00 a 21:00</string>
    <string name="number_of_people_with_bags">Nº Personas que sale con bolsas</string>
    <string name="number_of_people_who_declined_the_survey">Nº Personas que rechazaron la encuesta</string>
    <string name="add_person">Agregar persona</string>
    <string name="edit_people_info">Editar información</string>
    <string name="create_survey">Crear Encuesta</string>
    <string name="extra_info">Observaciones</string>
    <string-array name="rating_options">
        <item>NO APLICA</item>
        <item>NO CONTESTA ENCUESTA</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="carriers">
        <item>Claro</item>
        <item>Entel</item>
        <item>Movistar</item>
        <item>Vtr</item>
        <item>Nextel</item>
        <item>NO CAMBIA DE COMPAÑIA</item>
    </string-array>
</resources>
