<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.simopuve.activity.HeaderCreatorActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout10"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/sale_point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/sale_point" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout10"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout11">

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/address" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout11"
            android:id="@+id/textInputLayout12"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/location" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/survey_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/survey_date"
            android:inputType="date"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout12"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:id="@+id/textInputLayout13">

            <EditText
                android:id="@+id/people_am"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/number_of_people_am" />


        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="22dp"
            android:onClick="addPersonAM"
            android:background="@color/transparent"
            app:layout_constraintLeft_toRightOf="@id/textInputLayout13"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout12"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout13"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout14">

            <EditText
                android:id="@+id/people_pm"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/number_of_people_pm" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/add_button_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="22dp"
            android:onClick="addPersonPM"
            android:background="@color/transparent"
            app:layout_constraintLeft_toRightOf="@id/textInputLayout14"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout13"
            app:srcCompat="@android:drawable/ic_menu_add" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout14"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout15">

            <EditText
                android:id="@+id/people_bags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginRight="40dp"
                android:hint="@string/number_of_people_with_bags" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/add_button_3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="22dp"
            android:onClick="addPersonWithBag"
            android:background="@color/transparent"
            app:layout_constraintLeft_toRightOf="@id/textInputLayout15"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout14"
            app:srcCompat="@android:drawable/ic_menu_add" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout15">

            <EditText
                android:id="@+id/people_declined"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:hint="@string/number_of_people_who_declined_the_survey" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/add_button_4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="22dp"
            android:background="@color/transparent"
            app:layout_constraintLeft_toRightOf="@id/textInputLayout16"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="addPersonDeclined"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout15"
            app:srcCompat="@android:drawable/ic_menu_add" />
        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout16" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
